# crabby

./: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: bindings.ts  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/crabby/: device.json  devices.json  profiles.json
src-tauri/src/: commands.rs  device.rs  main.rs  profile.rs  start_up.rs  state.rs  storage_manager.rs
src-tauri/src/commands/: device_commands.rs  profile_commands.rs
src-tauri/src/device/: device_manager.rs  keyboard.rs  mouse.rs
src-tauri/src/profile/: default_profile_provider.rs  keyboard_profile.rs  mouse_profile.rs  profile_manager.rs
src/models/: command.ts  device.ts  profile.ts
src/models/global/: action.ts  index.ts  initial_state.ts  reducer.ts
src/styles/: app.css  landing_page.css  output.css
src/styles/src/: style.css
src/ui/: button.tsx  carousel.tsx  icon_button.tsx  index.ts  slider.tsx  status_indicator.tsx  text_input.tsx  toggle.tsx  useClickAway.ts
src/views/: app.tsx  landing_page.tsx
src/views/debug/: component_menu.tsx
src/views/landing_page/: device_extended_info_panel.tsx  device_info.tsx  device_profile_select.tsx  landing_page.tsx  mouse_panel_quick_controls.tsx
