[package]
name = "crabby"
version = "0.0.1"
description = "An desktop application for controling my custom peripheral's devices."
authors = ["Ramzi Abou Chahine"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "^1.0.0"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["typescript"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
directories = "5.0.1"
anyhow = "1.0.81"
bytes = "1.6.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
mockall = "0.12.1"
